--- a/modules/1237/pages/doc-1-overview.adoc
+++ b/modules/1237/pages/doc-1-overview.adoc
@@ -1,37 +1,72 @@
 = Document 1: Petition and Forestry Office Assessment Regarding Land Expansion (29–30 May 1798) 
 
-Jobst Heinrich Krückeberg likely submitted his request in person to the Amt (local office) in Bückeburg on or
-before 29 May 1798. We know this because the xref:image1.adoc[Document Index] records May 29, 1798, as the date of
-the "Petition of tenant farmer Krückeberg No. 10 in Berenbusch".
+== Document 1: Narrative Overview
 
-A clerk named Lindemann formally composed or transcribed Jobst Heinrich Krückeberg's petition onto official paper.
-The Amt also compiled a brief Forestry Report onto the same official paper and forwarded the document to the Cammer
-(central fiscal authority). The phrase *"praes: 30. May 1798"* (short for praesentiert, presented) was written by
-the Amt (in the upper right) to indicate the date the document was formally forwarded or submitted to the Cammer.
+=== 1. The Petition is Initiated at the Amt (≤ 29 May 1798)
 
-The Cammer (also located in Bückeburg) officially registered the document on 14 June 1798 (*B. 14. Jun. 1798*),
-assigning it the internal reference number *“Cam: Nr: 662”* and marking it as *“Res Cam”* (short for *“Rescriptum
-Cammerale”* or *“Rescript Cammeral”*), meaning it was formally filed and entered into the chamber’s registry for
-further handling. 
+In late May 1798, _Jobst Heinrich Krückeberg_, a tenant farmer holding farmstead No. 10 in the village of _Berenbusch_, approached the _Amt in Bückeburg_. His goal was to request additional land to expand his farmyard and garden.
 
-These labels were written in the upper-left corner by the Cammer as part of its document tracking process.  The
-one-day discrepancy between 29 May (when the petition was composed or recorded at the Amt) and 30 May (when it was
-formally forwarded to the Cammer) reflects the administrative sequence of submission and transfer—not necessarily
-when it was received or reviewed by the Cammer.
+Krückeberg likely spoke to an official named _Lindemann_, who recorded the petition for him — a common practice for semi-literate or illiterate petitioners. Lindemann formalized the request and noted in the final endorsement:
 
-== Document Components
+[verse]
+____
+Bückeburg, den 29t. Mai 1798.  
+unterschriebner Lindemann geh. pro St.  
+Col. Krückeberg No. 10 zu Berenbusch  
+____
 
-The larger texy is the Forestry Office assesstment regarding the land Jobst Heinrich Krückeberg has
-requested to purchase. The text written vertically along the lower left edge is an administrative note.
-The smaller text to the right and below the Forestry Office report is Jobst Heinrich's written petition
-composed by the clerk Lindemann. It continues and concludes on the backside.
- 
-=== Jobst Heinrich's Request
+This identifies Lindemann as the scribe of the petition, acting on Krückeberg’s behalf.
 
-Jobst Heinrich's request is the smaller text found on the Forestry Department's Report. The salution of his request
-is addressed to the ruling nobility of Schaumbug-Lippe and appears to the right of the text by the Forestry Department.
-The request itself begins below the Forestry Department Report and continues on the backside of the page where
-it concludes.
+=== 2. The Petition is Forwarded to the Cammer (30 May 1798)
+
+On the next day — 30 May 1798 — the _Vormundschaftliche Cammer_ (a high-level chamber of financial and administrative oversight in Schaumburg-Lippe) received and logged the petition. This is noted in the upper right header as:
+
+[verse]
+____
+Nr: 1  
+praes: 30. May 1798  
+____
+
+The number “1” suggests that this was the first case file in a sequence related to land requests or forestry matters at that time.
+
+=== 3. Forestry Assessment by MKaas (14 June 1798)
+
+Upon reviewing the petition, the Cammer initiated a review process by consulting the _Forstamt_, the forestry authority, likely to ensure that the land Krückeberg requested would not unduly affect timber resources or regulated forest land.
+
+An official named _MKaas_ was tasked with preparing this report. On 14 June 1798, he authored an assessment, which appears directly below the left-side header of Document 1:
+
+[quote]
+____
+Der verlangte Platz liegt in der Nähe des Dorfes Berenbusch ...  
+____
+
+MKaas concluded that:
+
+- The area in question was near the village and not part of any important forest tract,
+- The land could be cleared, but three saplings should be planted elsewhere as compensation.
+
+This shows the Forstamt found no major objections to the request.
+
+His signature, “MKaas,” appears at the end, likely followed by “Forstamt,” confirming his institutional affiliation.
+
+=== 4. Return of the Document to the Amt (18 February 1799)
+
+Several months later, on 18 February 1799, MKaas added a short administrative note written vertically in the lower left corner:
+
+[verse]
+____
+Res Cam. Brevi manu dem  
+Amte zum Berichte. B. 18.  
+Febr 1799  
+MKaas  
+____
+
+This Latin-German phrase roughly means:
+
+> “By order of the Cammer, hand-delivered to the Amt for a report.”
+
+This suggests that the Cammer returned the entire case file, including the petition and forestry report, to the Amt — possibly to inform Krückeberg or to request a response or implementation.
+
 
 [cols="1a,1a",frame="none",grid="none"]
 |===
