--- a/modules/1237/pages/doc-1-full.adoc
+++ b/modules/1237/pages/doc-1-full.adoc
@@ -3,8 +3,8 @@
 
 == Jobst Heinrich Krückeberg's Petition
 
-The body of the petition begins on the first page of document #1, but it continues on its backside.
-It is the smaller text seen on the first page. It continues onto the backside of the page.
+The petition begins on the first page of document #1 and continues on its backside.
+It is the smaller text seen in both images.
 
 [cols="1a,1a",frame="none",grid="none"]
 |===
@@ -84,9 +84,9 @@ Your High Comital Grace.
 ____
 |===
 
-== Transliteration and Translation of Endorsement of the Petition
+== Scribe’s Authentication
 
-The text appears at the bottom of the backside of the page below the 2^nd^ half of 
+The scribe's authenticatioin appears at the bottom of the backside of the page below the 2^nd^ half of 
 the petition.
 
 [cols="1a,1a"]
@@ -114,7 +114,7 @@ by order.
 
 == Forestry Office Assessment Regarding Land Expansion
 
-The Forestry report is the large text in the image.
+The Forestry report, which the Cammer would have requested after reviewing the petition, is the large text in the image.
 
 [cols="a,a"]
 |===
@@ -177,7 +177,7 @@ ____
 
 == Adminstrative Note
 
-The note is written vertical along the left edge below the Land Assessment.
+The administrative note is written vertical along the left edge below the Land Assessment.
 
 [cols="1a,1a"]
 |===
@@ -187,17 +187,17 @@ The note is written vertical along the left edge below the Land Assessment.
 [verse]
 ____
 Res Cam. Brevi manu dem  
-Amts zum Berichte. B. 18°  
+Amts zum Berichte. B. 18  
 
-Febr 1799    Maas
+Febr 1799    MKaas
 ____
 
 |
 [verse]
 ____
 Res Cam. Delivered by hand  
-to the office for the report. Encl. 18  
+to the Amt (office) for [the purpose of] reporting.
 
-Febr 1799    Maas
+18  Febr 1799    MKaas
 ____
 |===
