--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -6,7 +6,7 @@
 * xref:doc-1-overview.adoc[]
 ** xref:doc-1-full.adoc[]
 ** Breakdown: Header, Petition, Forestry, Note
-*** xref:image2-header.adoc[]
+*** xref:doc-1-header.adoc[]
 *** xref:image2-petition.adoc[]
 *** xref:image2-forestry-assessment.adoc[]
 *** xref:image2-admin-note.adoc[]
