--- a/modules/1237/pages/doc-1-header.adoc
+++ b/modules/1237/pages/doc-1-header.adoc
@@ -21,10 +21,10 @@ B. 14. Jun. 1798
 
 
 ....
-Cam: No. 662                                        No. 1.
-Resc[riptum] Cam[merale]
+Cam: No. 662                                      No. 1.
 
-regarding the Forestry Office report                forwarded: 30. May 1798.
+Cammer Directive                                 
+regarding the Forestry Office report              presented: 30 May 1798
 B[ückeburg] 14. Jun. 1798
        MK[initials of Cammer official]
 ....
@@ -33,7 +33,7 @@ B[ückeburg] 14. Jun. 1798
 
 * *"Nr:1"* in the upper right desiginates it as doucment number 1.
 * *"praes: 30. May 1798."* -- "praes:" is short for praesentiert (presented). May 30, 1798, was the date document 1
-was forwarded to the *Vormundlichte Cammer*, the guardianship chamber, a higher, state-level authority.
+was presented to (reviewed by) the *Vormundlichte Cammer*, the guardianship chamber, a higher, state-level authority.
 +
 In smaller German principalities like Schaumburg-Lippe, the *Vormundschaftliche Cammer* typically functioned as a
 kind of higher-level civil authority—combining:
@@ -47,13 +47,6 @@ kind of higher-level civil authority—combining:
 
 * *"Res Cam"* - is short for *“Rescriptum Cammerale”* or *“Rescript Cammer[al]”* . It refers to a *rescript* (a
 formal written response or decree) from the *Cammer* (the ruling fiscal or administrative body — in this case, the
-Vormundschaftliche Kammer in Bückeburg). This label likely anticipates that the document either is or will be
-part of a Cammer-issued rescript or relates to one.
-+
-In this context, it functions as a *classification or routing label* used by Cammer officials to group and identify
-documents belonging to or awaiting rescript-related processing.
-* *“zum Forstamts Bericht”* literally means:
-*“[belongs] with the Forestry Office report”* or *“regarding the Forestry Office report.”* 
-* *"B. 14. Jun. 1798"* - *“B.” = “Bückeburg”*, the seat of the Cammer. Thus: *“Recorded in Bückeburg on 14 June
-1798”*.
-* *"MK"* - These are likely the initials of the individual in the Cammer who wrote the left hand text.
+Vormundschaftliche Kammer in Bückeburg. In Document 1, the label ‘Res Cam’ appears to indicate that the Cammer’s
+directive or approval was issued directly on the document itself.
+
