--- a/modules/1237/pages/doc-1-full.adoc
+++ b/modules/1237/pages/doc-1-full.adoc
@@ -116,6 +116,36 @@ by order.
 
 The Forestry report, which the Cammer would have requested after reviewing the petition, is the large text in the image.
 
+The document header portion is shown first:
+
+[caption="Document header: "]
+.added by the Vormundliche Cammer
+[cols="1a,1a"]
+|===
+|Transliteration|Translation
+
+|
+....
+Cam: Nr: 662.                       Nr: 1.
+
+Res Cam
+zum Forstamts Bericht.              praes: 30. May 1798. 
+B. 14. Jun. 1798
+            MK
+....
+
+|
+....
+Cam: No. 662                                      No. 1.
+
+Cammer Directive                                 
+regarding the Forestry Office report              presented: 30 May 1798
+B[ückeburg] 14. Jun. 1798
+       MK[initials of Cammer official]
+....
+|===
+
+
 [cols="a,a"]
 |===
 |Transliteration|Translation
