--- a/modules/1237/pages/doc-1-full.adoc
+++ b/modules/1237/pages/doc-1-full.adoc
@@ -136,9 +136,9 @@ B. 14. Jun. 1798
 
 |
 ....
-Cam: No. 662                                      No. 1.
+Chamber: No. 662                                  No. 1.
 
-Cammer Directive                                 
+Filed by the Chamber                             
 regarding the Forestry Office report              presented: 30 May 1798
 B[ückeburg] 14. Jun. 1798
        MK[initials of Cammer official]
