--- a/modules/1237/pages/doc-1-header.adoc
+++ b/modules/1237/pages/doc-1-header.adoc
@@ -10,24 +10,28 @@ image::02-header.png[link=self]
 
 == Transliteration and Translation 
 
-....
-Cam: Nr: 662.                       Nr: 1.
+[cols="1a,1a"]
+|===
+|Transliteration|Translation
 
-Res Cam
-zum Forstamts Bericht.              praes: 30. May 1798. 
-B. 14. Jun. 1798
-            MK
+|
+....
+Supplic.
+Bückeburg d. 29t. Mai 1798.
+                                         unterschriebner
+Lindemann geh.                           Col. Krückeberg N. 10 zu Berenbusch
+pro St[atuent].
 ....
 
-
+|
 ....
-Cam: No. 662                                      No. 1.
-
-Cammer Directive                                 
-regarding the Forestry Office report              presented: 30 May 1798
-B[ückeburg] 14. Jun. 1798
-       MK[initials of Cammer official]
-....
+Petition.  
+Bückeburg, May 29, 1798.              
+                                           signed  
+Lindemann, written on behalf of            Col. Krückeberg No. 10 at Berenbusch
+by order.
+....                                   
+|===
 
 == Right Side Text
 
@@ -47,6 +51,11 @@ kind of higher-level civil authority—combining:
 
 * *"Res Cam"* - is short for *“Rescriptum Cammerale”* or *“Rescript Cammer[al]”* . It refers to a *rescript* (a
 formal written response or decree) from the *Cammer* (the ruling fiscal or administrative body — in this case, the
-Vormundschaftliche Kammer in Bückeburg. In Document 1, the label ‘Res Cam’ appears to indicate that the Cammer’s
-directive or approval was issued directly on the document itself.
-
+Vormundschaftliche Kammer in Bückeburg. 
++
+In Document 1, “Res Cam” likely does not mean that this specific document is the Cammer's directive. Instead, it means:
+[quote]
+____
+This petition has been received and filed by the Vormundschaftliche Cammer, which will evaluate the case and issue
+a formal rescript or decision later. 
+____
