--- a/modules/1237/pages/doc-1-header.adoc
+++ b/modules/1237/pages/doc-1-header.adoc
@@ -53,7 +53,8 @@ kind of higher-level civil authority—combining:
 formal written response or decree) from the *Cammer* (the ruling fiscal or administrative body — in this case, the
 Vormundschaftliche Kammer in Bückeburg. 
 +
-In Document 1, “Res Cam” likely does not mean that this specific document is the Cammer's directive. Instead, it means:
+In Document 1, *“Res Cam”* likely does not mean that this specific document is the Cammer's directive. Instead, it means:
++
 --
 [quote]
 ____
