--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -16,7 +16,7 @@
 * xref:image3-overview.adoc[] 
 ** xref:image3-full.adoc[]
 ** Breadown: Header, Report, Reaction
-*** xref:image3-header.adoc[]
+*** xref:doc-2-header.adoc[]
 *** xref:images3-4-report.adoc[]
 *** xref:image3-official-reaction.adoc[]
 * xref:image5-left-page.adoc[]
