--- a/modules/1237/pages/doc-1-header.adoc
+++ b/modules/1237/pages/doc-1-header.adoc
@@ -1,10 +1,9 @@
 = Header
 :page-role: wide
 
-The Petition and Forestry Assessment were drawn up by the local governmental administrative office (Amt) in Bückeburg. 
-They wrote the text that appears on the right side of the header. It was forwarded to the *Vormundliche Cammer*, the 
-guardianship chamber (aslo in Bückeberg) a state-level authority, who wrote the text that appears on the left side of
-the header.
+The petition was drawn up by the local governmental administrative office (Amt) in Bückeburg.  It was forwarded to
+the *Vormundliche Cammer*, the guardianship chamber (aslo in Bückeberg) a state-level authority, who are
+responsible for  the text that appears in the header.
 
 image::02-header.png[link=self]
 
