--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -7,7 +7,7 @@
 ** xref:doc-1-full.adoc[]
 ** Breakdown: Header, Petition, Forestry, Note
 *** xref:doc-1-header.adoc[]
-*** xref:image2-petition.adoc[]
+*** xref:doc-1-petition.adoc[]
 *** xref:doc-1-forestry-assessment.adoc[]
 *** xref:doc-1-admin-note.adoc[]
 //** xref:image2-petition.adoc[]
