--- a/modules/1237/pages/doc-1-header.adoc
+++ b/modules/1237/pages/doc-1-header.adoc
@@ -15,20 +15,22 @@ image::02-header.png[link=self]
 
 |
 ....
-Supplic.
-Bückeburg d. 29t. Mai 1798.
-                                         unterschriebner
-Lindemann geh.                           Col. Krückeberg N. 10 zu Berenbusch
-pro St[atuent].
+Cam:Nr:662.                              Nr:1
+Res Cam
+
+zum Forstamt Bericht
+B. 14. Jun 1798
+         MK
 ....
 
 |
 ....
-Petition.  
-Bückeburg, May 29, 1798.              
-                                           signed  
-Lindemann, written on behalf of            Col. Krückeberg No. 10 at Berenbusch
-by order.
+Chamber:No:662                              Nr:1
+Filed by the Chamber
+
+regarding the Forestry office report
+B[ückebuerg]. June 14, 1798
+         MK[initials of author]
 ....                                   
 |===
 
