--- a/modules/1237/pages/doc-1-full.adoc
+++ b/modules/1237/pages/doc-1-full.adoc
@@ -1,6 +1,38 @@
 = Full Document View
 :page-role: wide
 
+== Document Header
+
+The document header portion is shown first:
+
+[caption="Document header: "]
+.added by the Vormundliche Cammer to Document 1.
+[cols="1a,1a"]
+|===
+|Transliteration|Translation
+
+|
+....
+Cam: Nr: 662.                       Nr: 1.
+
+Res Cam
+zum Forstamts Bericht.              praes: 30. May 1798. 
+B. 14. Jun. 1798
+            MK
+....
+
+|
+....
+Chamber: No. 662                                  No. 1.
+
+Filed by the Chamber                             
+regarding the Forestry Office report              presented: 30 May 1798
+B[ückeburg] 14. Jun. 1798
+       MK[initials of Cammer official]
+....
+|===
+
+
 == Jobst Heinrich Krückeberg's Petition
 
 The petition begins on the first page of document #1 and continues on its backside.
@@ -115,36 +147,6 @@ by order.
 == Forestry Office Assessment Regarding Land Expansion
 
 The Forestry report, which the Cammer would have requested after reviewing the petition, is the large text in the image.
-
-The document header portion is shown first:
-
-[caption="Document header: "]
-.added by the Vormundliche Cammer to Document 1.
-[cols="1a,1a"]
-|===
-|Transliteration|Translation
-
-|
-....
-Cam: Nr: 662.                       Nr: 1.
-
-Res Cam
-zum Forstamts Bericht.              praes: 30. May 1798. 
-B. 14. Jun. 1798
-            MK
-....
-
-|
-....
-Chamber: No. 662                                  No. 1.
-
-Filed by the Chamber                             
-regarding the Forestry Office report              presented: 30 May 1798
-B[ückeburg] 14. Jun. 1798
-       MK[initials of Cammer official]
-....
-|===
-
 
 [cols="a,a"]
 |===
