--- a/modules/1237/pages/images3-4-report.adoc
+++ b/modules/1237/pages/images3-4-report.adoc
@@ -5,7 +5,7 @@
 
 This is the Land Assigment Report issued by the issued by the *Ämter Bückeburg und Arensburg* (local
 adminstrative offices of Bückeburg and Arenburg). They are reporting to the *Gräflich vormundschaftliche
-Cammer* (Countly Guardianship Chamber), which was the higher fiscal and administrative authority for
+Cammer* (Count's Guardianship Chamber), which was the higher fiscal and administrative authority for
 land and estate matters. 
 
 The response to their report was also written on the left side of this report; however, in this image,
