--- a/todo.adoc
+++ b/todo.adoc
@@ -1,8 +1,8 @@
 = TODO
 
 1. Add more detail to doc-1-forestry-assessment.adoc. Take it from the Narraitive Overview.
+2. Double check image3-official-reaction that the text is accurate. Turn the overview into a narrative.
 
-* Finish this document on my own, organize it on my own.s
 * Make sure the glossaries are right for each page.
 * https://docs.antora.org/assembler/latest/ shows how to setup PDF generation
 * Jobst Heinrich Krückeberg was granted a deed to the land he was allocated and allowed to purchase. Search for it.
