--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -42,6 +42,10 @@ These are the case files examined on this website:
 |Konkurs des Jobst Krückeberg [in Bückeburg]
 |Bankruptcy of Jobst Krückeberg [in Bückeburg]
 |1725 - 1725
+
+|link:https://www.arcinsys.niedersachsen.de/arcinsys/detailAction?detailid=v4978697[NLA BU K 2 A Nr. 1291]
+|Ausweisung vom Forstgrunde 1. an den Colon Krückeberg Nr. 10 in Berenbusch, 2. an den Einlieger Vogt und Brüggemann zur Errichtung der Neubauerstätten Nr. 13 und Nr. 14 in Nordholz
+|Designation of the forest land 1. to the Colon Krückeberg No. 10 in Berenbusch, 2. to the tenants Vogt and Brüggemann for the construction of the new farmsteads No. 13 and No. 14 in Nordholz
 |===
 //|NLA BU, L 20, C Nr. 98
 //|Testament der Witwe Hauptmännin Krückeberg
