--- a/todo.adoc
+++ b/todo.adoc
@@ -5,18 +5,104 @@
 
 * Make sure the glossaries are right for each page.
 * https://docs.antora.org/assembler/latest/ shows how to setup PDF generation
-* Jobst Heinrich Krückeberg was granted a deed to the land he was allocated and allowed to purchase. Search for it.
 
 == Other Activities
 
 * Volunteer for Convention
 * Append 06-left-page image and text into image5 image and text.
-
 * Break Document 1 into a landing index page and two subpages: one for the petition and its endorsement, the other for the
 report.
 * Make Document 2 one page--but only after determing if:
 ** the left page of Document #3 is likely part of document #2.
 * Decide on titles for documents #5 and #6.
+
+
+== Searching for Jobst Heinrich Krückeberg's Deed
+
+Jobst Heinrich Krückeberg was granted a deed to the land he was allocated and allowed to purchase. How to search:
+
+=== Step-by-Step Search Strategy on Arcinsys
+
+To search for a possible deed (Kaufbrief) or related land documents for Jobst Heinrich Krückeberg from 1800, follow these steps on the Arcinsys Niedersachsen portal.
+
+==== 1. Visit the Portal
+
+Start your search at:
+
+https://www.arcinsys.niedersachsen.de
+
+Click on the button labeled _"Recherche starten"_ (Start Search).
+
+==== 2. Enter Targeted Search Terms
+
+Use one of the following suggested search phrases (run each separately in the search bar labeled _"Suchbegriff"_):
+
+[cols="1,3"]
+|===
+| Search Phrase | Notes
+
+| `Kruckeberg Berenbusch`
+| Use the surname and village together.
+
+| `Kaufbrief Berenbusch`
+| Search for land deeds (purchase letters).
+
+| `Ausweisung Berenbusch`
+| Refers to land allocation or assignment.
+
+| `Colon Kruckeberg`
+| Uses his title as a hereditary tenant farmer.
+
+| `Hof Nr 10 Berenbusch`
+| Specific property reference.
+
+| `C. 67`
+| The archival call number from the case file.
+
+| `Krückeberg Kaufvertrag`
+| “Purchase contract” phrasing.
+
+| `Bückeburg Cammer 1800`
+| Broader search by institution and year.
+|===
+
+==== 3. Apply Archive Location Filter
+
+On the left sidebar under _"Archiv auswählen"_ (Choose Archive), select:
+
+[quote]
+____
+Niedersächsisches Landesarchiv – Standort Bückeburg
+____
+
+This will filter results to the relevant holdings from Schaumburg-Lippe.
+
+==== 4. (Optional) Use a Date Filter
+
+You may also apply a date filter:
+
+- From: `1795`
+- To: `1805`
+
+This helps narrow the results to the relevant time period.
+
+==== 5. Interpreting Results
+
+Click on any promising result title to view more details. Watch for keywords in the series or record descriptions
+such as:
+
+* _Cammer-Sachen_ or _Kammer-Sachen_ (Chamber matters)
+* _Liegenschaften_ (Real estate)
+* _Kaufverträge_ (Purchase contracts)
+* _Ausweisungen_ (Land assignments)
+* _Acta betreffend ..._ (Files concerning ...)
+
+If a result looks relevant, click on _"Zitierlink anzeigen"_ (Show citation link) to get a permanent link.
+
+==== Optional Follow-Up
+
+If you find a likely result, you can email the archive with the citation details to request more information or to
+inquire about access or digital copies.
 
 == Indexing System for Documents
 
