--- a/modules/1237/pages/image5-6-main-txt.adoc
+++ b/modules/1237/pages/image5-6-main-txt.adoc
@@ -116,7 +116,7 @@ Espp: Schwarze
                   Bückeburg d. 11. Merz 1799.
                   Anstatt pp
                   
-                  Hering         Riehe         Mhag.
+                  Hering         Riehe         Mkaas
                   Emmerwarth     v. Landesberg
 
 
@@ -178,7 +178,7 @@ to the Officials at Bückeburg
                   Bückeburg, March 11, 1799.
                   In place of "per procurationem"
 
-                  Hering         Riehe         Mhag.
+                  Hering         Riehe         Mkaas
                   Emmerwarth     v. Landesberg
 
 
