--- a/modules/1237/pages/doc3-header.adoc
+++ b/modules/1237/pages/doc3-header.adoc
@@ -11,8 +11,12 @@ image::05-right-header.png[link=self]
 |Transliteration|Translation
 
 |
-....
-....
+[verse]
+____
+ad nr. Cam:53. F.S.
+Concept Cammer:Rescripts
+an die Beamte zu Buckeburg
+____
 |
 ....
 ....
@@ -22,11 +26,6 @@ image::05-right-header.png[link=self]
 
 * *"3"* in the upper right (with a box drawn around it) desiginates it as doucment number 3.
 
-* *"pr: 6 Merz 1799"* -- *"pr:"* is short for praesentiert (presented). On March 6, 1799, document 2
-was presented before the *Vormundlichte Cammer*, the guardianship chamber, the higher, state-level
-authority that makes binding decisions.
-
 * *"Cam: Nr:53"* -- or *"Cam[mer] No. 53"* in the upper left is an internal archiving, filing and retreival number assignment to document 2
 by the Vormundliche Cammer.
-* *"Forst-Sachen"* -- indicates the topic of the document: it concerned forestry matters.
 
