--- a/modules/1237/pages/doc3-header.adoc
+++ b/modules/1237/pages/doc3-header.adoc
@@ -13,13 +13,17 @@ image::05-right-header.png[link=self]
 |
 [verse]
 ____
-ad nr. Cam:53. F.S.
+ad nr. Cam:53. S.S.
 Concept Cammer:Rescripts
 an die Beamte zu Buckeburg
 ____
 |
-....
-....
+[verse]
+____
+Regarding No. 53 from the Chamber (as noted above)
+Draft of Chamber Directive
+to the officials in Bückeburg
+____
 |===
 
 === Text Written by the Vormundliche Kammer
