--- a/modules/1237/pages/doc3.adoc
+++ b/modules/1237/pages/doc3.adoc
@@ -130,9 +130,9 @@ ____
 |
 [verse]
 ____
-Ref. No.: Chamber 53. S. S. [supra scripta]   
-Draft of Chamber Rescript
-to the Officials at Bückeburg
+Regarding No. 53 from the Chamber (as noted above)
+Draft of Chamber Directive
+to the officials in Bückeburg
 
                   Very Gracious Lords,
                   In response to your report
