--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -10,29 +10,28 @@
 == The Land Assignment Report
 
 Document 2 is a formal report submitted jointly by the local administrative offices (Ämter) of Bückeburg and
-Arensburg to the Vormundschaftliche Cammer. It serves as the official response to a petition originally submitted
-by tenant farmer Jobst Heinrich Krückeberg, Nr. 10 in Berenbusch, who had requested permission to purchase adjacent
-land to enlarge his garden and farmyard.
+Arensburg to the Vormundschaftliche Cammer. It responds not merely to the original petition by tenant farmer Jobst
+Heinrich Krückeberg, Nr. 10 in Berenbusch, but to the Cammer’s preliminary actions upon receiving that petition.
 
-The petition (Document 1) was initially submitted to the Cammer at the end of May 1798, then supplemented with a
-Forestry Office assessment in June 1798. After reviewing these materials, the Cammer issued a directive that the
-Aemter provide a formal statement addressing the petition’s implications and any local concerns.
+After Krückeberg's petition was submitted to the Cammer at the end of May 1798, the Cammer commissioned a Forestry
+Office assessment to determine whether the proposed garden and farmyard expansion would negatively impact public
+land or forest resources. The assessment concluded that the land could be granted with minimal concern, provided
+that Krückeberg replant three saplings for each tree removed. This assessment was added to the petition sheet and
+returned to the Aemter in February 1799, via hand delivery.
 
-Document 2 is the result of that directive. It begins with a brief cover report to the Cammer, identifying the
-matter as a forestry-related case and referencing the attached petition (remitted "in der Anlage"). The Aemter
-report that among the residents of Berenbusch, Nordholz, and Evesen, only one objection had been raised—by a
-wealthy "Köter" (smallholder) in Berenbusch name *Weiland*. This man objected both because he wished to obtain the
-land himself and because he feared it might obstruct his access route for transporting crops.
+With this guidance in hand, the Aemter prepared Document 2 in March 1799 to inform the Cammer that they had
+reviewed the petition and the forestry report, and that local sentiment was broadly favorable. Only one villager, a
+Brink resident named Weiland, raised objections — which the Aemter dismissed as self-serving and lacking merit.
+
+It begins with a brief cover report to the Cammer, identifying the matter as a forestry-related case and
+referencing the attached petition (remitted "in der Anlage"). The Aemter report that among the residents of
+Berenbusch, Nordholz, and Evesen, only one objection had been raised—by a wealthy "Köter" (smallholder) in
+Berenbusch name *Weiland*. This man objected both because he wished to obtain the land himself and because he
+feared it might obstruct his access route for transporting crops.
 
 The tone of the report emphasizes that this is a solitary objection and implies that no significant opposition
 exists among the broader population. The Aemter thus present the Krückeberg petition as reasonable and largely
 uncontroversial at the local level.
-
-This document plays a pivotal role in confirming that the proposed land assignment was acceptable to local
-authorities and residents. It also reinforces the practice of thorough administrative review in Schaumburg-Lippe:
-one in which petitions moved through multiple layers of evaluation—local, forestry, and state-level—before any
-final resolution was issued.
-
 
 === Cammer's Official Response
 
