--- a/modules/1237/pages/doc2-report.adoc
+++ b/modules/1237/pages/doc2-report.adoc
@@ -110,9 +110,8 @@ harvests would be overly restricted.
 
 We will assess this more closely  
 during the surveying process and  
-be of the opinion that regarding the  
-access route no legitimate  
-objection remains.  
+and will ensure that no valid objection
+remains regarding his access route to the road.
 
 In particular, what prompted his  
 objection is the planting  
