--- a/modules/1237/pages/doc2-full.adoc
+++ b/modules/1237/pages/doc2-full.adoc
@@ -150,9 +150,11 @@ ____
 |
 [verse, Response from the Gräflich vormundschaftliche Cammer* (Countly Guardianship Chamber)]
 ____
-The plot is therefore to be allocated, and since various residents in
-Berenbusch are said to have enlarged their gardens on their own authority, the
-officials are to obtain further information about this and report accordingly.
+The plot is therefore to be allocated, and since
+various residents in Berenbusch are said to have
+enlarged their gardens on their own authority, the
+officials are to obtain further information about
+this and report accordingly.
 
 B[ückeburg], 10 March
 M[aas]
