--- a/modules/1237/pages/doc2-official-reaction.adoc
+++ b/modules/1237/pages/doc2-official-reaction.adoc
@@ -28,12 +28,8 @@ auszuweisen, und da verschiedene
 Einwohner in Berenbusch ihre  
 Gärten eigenmächtig vergrößert  
 haben sollen; so haben die Beamte  
-darüber  
-nähere  
-Auskunft  
-einzuziehen  
-und darüber  
-zu berichten.  
+darüber nähere Auskunft einzuziehen  
+und darüber zu berichten.  
 
 B. 10.  
 März  
@@ -44,9 +40,12 @@ ____
 |
 [verse, Response from the Gräflich vormundschaftliche Cammer* (Countly Guardianship Chamber)]
 ____
-The plot is therefore to be allocated, and since various residents in
-Berenbusch are said to have enlarged their gardens on their own authority, the
-officials are to obtain further information about this and report accordingly.
+The plot is therefore to be allocated,
+and since various residents in Berenbusch
+are said to have enlarged their gardens on
+their own authority, the officials are to
+obtain further information about this and
+report accordingly.
 
 B[ückeburg], 10 March
 M[aas]
