--- a/modules/1237/pages/doc2-official-reaction.adoc
+++ b/modules/1237/pages/doc2-official-reaction.adoc
@@ -1,4 +1,5 @@
 = Official Reaction to Petition and Land Assignment Report
+:page-role: wide
 
 The *marginal note* in the image is a response to the remitted xref:image3-land-assignment-report[Land
 Assignment Report], but not a formal reply addressed to Krückeberg. It is an internal instruction,
