--- a/modules/1237/pages/image8-right-page.adoc
+++ b/modules/1237/pages/image8-right-page.adoc
@@ -2,7 +2,7 @@
 :page-role: wide
 
 Document 4½ is signed by Lieutenant Funck, a "beeidigter Landmesser" (sworn land surveyor). As a technical specialist, Funck was not part of the
-administrative offices (Amt) that issued Document 4. His report was therefore xref:image1.adoc[logged] as an independent piece of correspondence,
+administrative offices (Amt) that issued Document 4. His report was therefore xref:doc-index.adoc[logged] as an independent piece of correspondence,
 even though it accompanied xref:image6-right-page.adoc[document 4].
 
 NOTE: The surveyor completed his drawing over a year before it was enclosed in xref:image6-right-page.adoc[document 4]. His drawing is
