--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -19,9 +19,9 @@ land or forest resources. The assessment concluded that the land could be grante
 that Krückeberg replant three saplings for each tree removed. This assessment was added to the petition sheet and
 returned to the Aemter in February 1799, via hand delivery.
 
-With this guidance in hand, the Aemter prepared Document 2 in March 1799 to inform the Cammer that they had
-reviewed the petition and the forestry report, and that local sentiment was broadly favorable. Only one villager, a
-Brink resident named Weiland, raised objections — which the Aemter dismissed as self-serving and lacking merit.
+With this guidance in hand, the Ämter(plural of Amt) prepared Document 2 in March 1799 to inform the Cammer that
+they had reviewed the petition and the forestry report that the Cammer had written onto Document 1, and that only
+one villager, a Berenbusch resident named Weiland, raised objections — which the Ämter dismissed as without merit.
 
 It begins with a brief cover report to the Cammer, identifying the matter as a forestry-related case and
 referencing the attached petition (remitted "in der Anlage"). The Aemter report that among the residents of
