--- a/modules/1237/pages/doc1-forestry-assessment.adoc
+++ b/modules/1237/pages/doc1-forestry-assessment.adoc
@@ -52,12 +52,10 @@ Recorded by the Office: 14 June 1798
 Initials: MK
 
 The requested plot lies
-in the village street of
-Berenbusch, and is
-a small
-corner that may be
-granted without causing
-any disadvantage.
+in [or adjacent to] the village street of
+Berenbusch, and is a small
+corner that may be granted without
+causing any detriment.
 — The poplars standing
 there are to be sold by the forestry office,
 and Krückeberg is to be
