--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -9,29 +9,14 @@
 
 == The Land Assignment Report
 
-Document 2 is a formal report submitted jointly by the local administrative offices (Ämter) of Bückeburg and
-Arensburg to the Vormundschaftliche Cammer. It responds not merely to the original petition by tenant farmer Jobst
-Heinrich Krückeberg, Nr. 10 in Berenbusch, but to the Cammer’s preliminary actions upon receiving that petition.
+After the Cammer reviewed Krückeberg's petition (Document 1), they commissioned a Forestry Office assessment, which
+was drafted onto Document 1. It concluded the enlargement of Krückeberg's garden and farmyard would have no
+detimental impact. Some poplars would need to be removed and sold by the forestry office, and Krückeberg would be
+obligated to replant three saplings in another area of the forest as replacements.
 
-After Krückeberg's petition was submitted to the Cammer at the end of May 1798, the Cammer commissioned a Forestry
-Office assessment to determine whether the proposed garden and farmyard expansion would negatively impact public
-land or forest resources. The assessment concluded that the land could be granted with minimal concern, provided
-that Krückeberg replant three saplings for each tree removed. This assessment was added to the petition sheet and
-returned to the Aemter in February 1799, via hand delivery.
-
-With this guidance in hand, the Ämter(plural of Amt) prepared Document 2 in March 1799 to inform the Cammer that
-they had reviewed the petition and the forestry report that the Cammer had written onto Document 1, and that only
-one villager, a Berenbusch resident named Weiland, raised objections — which the Ämter dismissed as without merit.
-
-It begins with a brief cover report to the Cammer, identifying the matter as a forestry-related case and
-referencing the attached petition (remitted "in der Anlage"). The Aemter report that among the residents of
-Berenbusch, Nordholz, and Evesen, only one objection had been raised—by a wealthy "Köter" (smallholder) in
-Berenbusch name *Weiland*. This man objected both because he wished to obtain the land himself and because he
-feared it might obstruct his access route for transporting crops.
-
-The tone of the report emphasizes that this is a solitary objection and implies that no significant opposition
-exists among the broader population. The Aemter thus present the Krückeberg petition as reasonable and largely
-uncontroversial at the local level.
+With this guidance from the Cammer, the Ämter(plural of Amt) prepared Document 2 in March 1799 to inform the Cammer that
+they had reviewed the forestry report, and that only one Berenbusch resident named Weiland raised objections — which
+the Ämter dismissed as without merit.
 
 === Cammer's Official Response
 
